Se agrega mi nombre a los integrantes y unas referencias.

--- a/progconcurrente/concurrente_teoria/index.html
+++ b/progconcurrente/concurrente_teoria/index.html
@@ -3641,6 +3641,12 @@ TotalMilliseconds : 832,8442
               <li><a style="background-color: #FFFFFF;color: blue; text-align: left;"
                 href="https://ericnormand.me/article/concurrency-vs-parallelism">Concurrency and Parallelism in the Real World</a>
               </li>
+              <li><a style="background-color: #FFFFFF;color: blue; text-align: left;"
+                href="https://www.quora.com/What-is-concurrency-and-why-is-it-used-in-programming">What is concurrency used for?</a>
+              </li> 
+              <li><a style="background-color: #FFFFFF;color: blue; text-align: left;"
+                href="https://www.geeksforgeeks.org/concurrency-in-operating-system/">Concurrency in operating system</a>
+              </li>
             </ul>
           </div>
 
@@ -3697,6 +3703,7 @@ TotalMilliseconds : 832,8442
             <li>Cristian Camilo Garcia Barrera</li>
             <li>Diego Armando Velasquez Vargas</li>
             <li>Daniel Santiago Gaitán</li>
+            <li>Carlos Andres Rios Rojas</li>
           </ul>
         </div>
       </section>
