Se agrego link ejemplo The Deadlock Empire

--- a/progconcurrente/concurrente_teoria/index.html
+++ b/progconcurrente/concurrente_teoria/index.html
@@ -3675,6 +3675,9 @@ TotalMilliseconds : 832,8442
               <li><a style="background-color: #FFFFFF;color: blue; text-align: left;"
                 href="https://arxiv.org/ftp/arxiv/papers/1008/1008.1459.pdf">Actor Model of Computation: Scalable Robust Information Systems</a>
               </li>
+              <li><a style="background-color: #FFFFFF;color: blue; text-align: left;"
+                href="https://deadlockempire.github.io/">Aprende Concurrencia matando dragones</a>
+              </li>
             </ul>
           </div>
 
