[AOP - 2023 - 1] Examples, advantages and disadvantages updated

--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
               <h6>Erlang</h6>
             </div>
           </a>
-          <a href="http://nbviewer.jupyter.org/url/ferestrepoca.github.io/paradigmas-de-programacion/progconcurrente/tutoriales/GO/GO(ProgConcurrente).ipynb">
+          <a
+            href="http://nbviewer.jupyter.org/url/ferestrepoca.github.io/paradigmas-de-programacion/progconcurrente/tutoriales/GO/GO(ProgConcurrente).ipynb">
             <div class="language">
               <img class="download_img" src="./images/languages_icons/go.png" alt="Descargas">
               <h6>Golang</h6>
@@ -203,7 +204,8 @@
               <h6>Rust 2021-01</h6>
             </div>
           </a>
-          <a href="./progconcurrente/tutoriales/Elixir/Elixir-%20presentado%20por%20Sergio%20Gil,Oscar%C3%91a%C3%B1ez,Gabriela%20Suarez.html">
+          <a
+            href="./progconcurrente/tutoriales/Elixir/Elixir-%20presentado%20por%20Sergio%20Gil,Oscar%C3%91a%C3%B1ez,Gabriela%20Suarez.html">
             <div class="language">
               <img class="download_img" src="./images/languages_icons/elixir.png" alt="Descargas">
               <h6>Elixir</h6>
@@ -234,7 +236,8 @@
           </a>
           <a href="./proglogica/tutoriales/godel/index.html">
             <div class="language">
-              <img class="download_img" src="https://avatars2.githubusercontent.com/u/6884283?v=3&amp;s=200" alt="Descargas">
+              <img class="download_img" src="https://avatars2.githubusercontent.com/u/6884283?v=3&amp;s=200"
+                alt="Descargas">
               <h6>Gödel</h6>
             </div>
           </a>
@@ -288,7 +291,7 @@
             <button class="paradigm_button">Detalles</button>
           </a>
         </div>
-        
+
         <div class="paradigm_right">
           <a href="./reactive/tutoriales/Svelte/index.html">
             <div class="language">
@@ -316,7 +319,7 @@
           href="https://github.com/ferestrepoca">ferestrepoca</a></p>
       <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       <p class="copyright">Icons made by <a href="https://www.flaticon.com">www.flaticon.com</a>
-      </div>
+    </div>
   </footer>
   <script>
     (function (i, s, o, g, r, a, m) {
