--- a/poa/poa_teoria/Pages/presentaciones.html
+++ b/poa/poa_teoria/Pages/presentaciones.html
@@ -1,299 +1,140 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Programacion Orientada a Aspectos</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../stylesheets/normalize.css"
-      media="screen"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../stylesheets/stylesheet.css"
-      media="screen"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../stylesheets/github-light.css"
-      media="screen"
-    />
-  </head>
-  <body>
-    <section class="page-header">
-      <h1 class="project-name">Programacion Orientada a Aspectos</h1>
-      <h2 class="project-tagline"></h2>
 
-      <a href="../index.html" class="btn">Inicio</a>
-      <a href="historia.html" class="btn">Historia</a>
-      <a href="filosofia.html" class="btn">Filosofía del Paradigma</a>
-      <a href="evolucion.html" class="btn">Conceptos Claves</a>
-      <a href="ventajasydesventajas.html" class="btn">Ventajas y desventajas</a>
-      <a href="lenguajes.html" class="btn">Lenguajes</a>
-      <a href="aplicaciones.html" class="btn">Aplicaciones</a>
-      <a class="btn btn-actual">Presentaciones</a>
-      <a href="practicas.html" class="btn">Practica</a>
-      <a href="ejemplos.html" class="btn">Ejemplos</a>
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <title>Programacion Orientada a Aspectos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" href="../stylesheets/normalize.css" media="screen" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="../stylesheets/github-light.css" media="screen" />
+</head>
 
-    <section class="main-content">
-      <h1>
-        <a
-          id="programaciÓn-orientada-a-aspectos"
-          class="anchor"
-          href="#programaci%C3%93n-orientada-a-aspectos"
-          aria-hidden="true"
-        >
-          <span aria-hidden="true" class="octicon octicon-link"></span></a
-        >PROGRAMACIÓN ORIENTADA A ASPECTOS.
-      </h1>
+<body>
+  <section class="page-header">
+    <h1 class="project-name">Programacion Orientada a Aspectos</h1>
+    <h2 class="project-tagline"></h2>
 
-      <h1>
-        <a
-          id="introducción"
-          class="anchor"
-          href="#introducci%C3%B3n"
-          aria-hidden="true"
-        >
-          <span aria-hidden="true" class="octicon octicon-link"></span></a
-        >Presentaciones
-      </h1>
+    <a href="../index.html" class="btn">Inicio</a>
+    <a href="historia.html" class="btn">Historia</a>
+    <a href="filosofia.html" class="btn">Filosofía del Paradigma</a>
+    <a href="evolucion.html" class="btn">Conceptos Claves</a>
+    <a href="ventajasydesventajas.html" class="btn">Ventajas y desventajas</a>
+    <a href="lenguajes.html" class="btn">Lenguajes</a>
+    <a href="aplicaciones.html" class="btn">Aplicaciones</a>
+    <a class="btn btn-actual">Presentaciones</a>
+    <a href="practicas.html" class="btn">Practica</a>
+    <a href="ejemplos.html" class="btn">Ejemplos</a>
+  </section>
 
-      <p align="justify">
-        En esa sección encontrarás las diapositivas de presentaciones previas
-      </p>
+  <section class="main-content">
+    <h1>
+      <a id="programaciÓn-orientada-a-aspectos" class="anchor" href="#programaci%C3%93n-orientada-a-aspectos"
+        aria-hidden="true">
+        <span aria-hidden="true" class="octicon octicon-link"></span></a>PROGRAMACIÓN ORIENTADA A ASPECTOS.
+    </h1>
 
-      <h2>
-        <a
-          id="referencias"
-          class="anchor"
-          href="#referencias"
-          aria-hidden="true"
-          ><span aria-hidden="true" class="octicon octicon-link"></span></a
-        >Presentaciones 1:
-      </h2>
-      <iframe
-        src="../slides/ProgramacionPorAspectos.pdf"
-        width="960px"
-        height="540px"
-        seamless
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-      ></iframe>
+    <h1>
+      <a id="introducción" class="anchor" href="#introducci%C3%B3n" aria-hidden="true">
+        <span aria-hidden="true" class="octicon octicon-link"></span></a>Presentaciones
+    </h1>
 
-      <h2>
-        <a
-          id="referencias"
-          class="anchor"
-          href="#referencias"
-          aria-hidden="true"
-          ><span aria-hidden="true" class="octicon octicon-link"></span></a
-        >Presentaciones 2017-1:
-      </h2>
-      <iframe
-        src="../slides/POA2017I.pdf"
-        width="960px"
-        height="540px"
-        seamless
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-      ></iframe>
+    <p align="justify">
+      En esa sección encontrarás las diapositivas de presentaciones previas
+    </p>
 
-      <h2>
-        <a
-          id="referencias"
-          class="anchor"
-          href="#referencias"
-          aria-hidden="true"
-          ><span aria-hidden="true" class="octicon octicon-link"></span></a
-        >Presentaciones 2017-2:
-      </h2>
-      <iframe
-        src="../slides/Programación orientada a aspectos 2017_2.pdf"
-        width="960px"
-        height="540px"
-        seamless
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-      ></iframe>
-      <h2>
-        <a
-          id="referencias"
-          class="anchor"
-          href="#referencias"
-          aria-hidden="true"
-          ><span aria-hidden="true" class="octicon octicon-link"></span></a
-        >Presentaciones 2018-1:
-      </h2>
-      <iframe
-        src="../slides/Programacion orientada a aspectos 2018-1.pdf"
-        width="960px"
-        height="540px"
-        seamless
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-      ></iframe>
+    <h2>
+      <a id="referencias" class="anchor" href="#referencias" aria-hidden="true"><span aria-hidden="true"
+          class="octicon octicon-link"></span></a>Presentaciones 1:
+    </h2>
+    <iframe src="../slides/ProgramacionPorAspectos.pdf" width="960px" height="540px" seamless webkitallowfullscreen
+      mozallowfullscreen allowfullscreen></iframe>
 
-      <h2>
-        <a
-          id="referencias"
-          class="anchor"
-          href="#referencias"
-          aria-hidden="true"
-          ><span aria-hidden="true" class="octicon octicon-link"></span></a
-        >Presentaciones 2018-2:
-      </h2>
-      <iframe
-        src="../slides/Programacion orientada a aspectos 2018-2.pdf"
-        width="960px"
-        height="600px"
-        seamless
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-      ></iframe>
-      <h2>
-        <a
-          id="referencias"
-          class="anchor"
-          href="#referencias"
-          aria-hidden="true"
-          ><span aria-hidden="true" class="octicon octicon-link"></span></a
-        >Presentaciones 2019-1:
-      </h2>
-      <iframe
-        src="../slides/Programacion_orientada_aspectos_2019-1.pdf"
-        width="960px"
-        height="600px"
-        seamless
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-      ></iframe>
+    <h2>
+      <a id="referencias" class="anchor" href="#referencias" aria-hidden="true"><span aria-hidden="true"
+          class="octicon octicon-link"></span></a>Presentaciones 2017-1:
+    </h2>
+    <iframe src="../slides/POA2017I.pdf" width="960px" height="540px" seamless webkitallowfullscreen mozallowfullscreen
+      allowfullscreen></iframe>
 
-      <h2>
-        <a
-          id="referencias"
-          class="anchor"
-          href="#referencias"
-          aria-hidden="true"
-          ><span aria-hidden="true" class="octicon octicon-link"></span></a
-        >Presentaciones 2019-2:
-      </h2>
-      <iframe
-        src="../slides/POA_2019_2.pdf"
-        width="960px"
-        height="600px"
-        seamless
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-      ></iframe>
+    <h2>
+      <a id="referencias" class="anchor" href="#referencias" aria-hidden="true"><span aria-hidden="true"
+          class="octicon octicon-link"></span></a>Presentaciones 2017-2:
+    </h2>
+    <iframe src="../slides/Programación orientada a aspectos 2017_2.pdf" width="960px" height="540px" seamless
+      webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <h2>
+      <a id="referencias" class="anchor" href="#referencias" aria-hidden="true"><span aria-hidden="true"
+          class="octicon octicon-link"></span></a>Presentaciones 2018-1:
+    </h2>
+    <iframe src="../slides/Programacion orientada a aspectos 2018-1.pdf" width="960px" height="540px" seamless
+      webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-      <h2>
-        <a
-          id="referencias"
-          class="anchor"
-          href="#referencias"
-          aria-hidden="true"
-          ><span aria-hidden="true" class="octicon octicon-link"></span></a
-        >Presentacion 2021-1:
-      </h2>
-      <iframe
-        src="../slides/POA_2021_1.pdf"
-        width="960px"
-        height="600px"
-        seamless
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-      ></iframe>
+    <h2>
+      <a id="referencias" class="anchor" href="#referencias" aria-hidden="true"><span aria-hidden="true"
+          class="octicon octicon-link"></span></a>Presentaciones 2018-2:
+    </h2>
+    <iframe src="../slides/Programacion orientada a aspectos 2018-2.pdf" width="960px" height="600px" seamless
+      webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <h2>
+      <a id="referencias" class="anchor" href="#referencias" aria-hidden="true"><span aria-hidden="true"
+          class="octicon octicon-link"></span></a>Presentaciones 2019-1:
+    </h2>
+    <iframe src="../slides/Programacion_orientada_aspectos_2019-1.pdf" width="960px" height="600px" seamless
+      webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-      <h2>
-        <a
-          id="referencias"
-          class="anchor"
-          href="#referencias"
-          aria-hidden="true"
-          ><span aria-hidden="true" class="octicon octicon-link"></span></a
-        >Presentacion 2021-2:
-      </h2>
-      <iframe
-        src="../slides/POA_2021_2.pdf"
-        width="960px"
-        height="600px"
-        seamless
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-      ></iframe>
+    <h2>
+      <a id="referencias" class="anchor" href="#referencias" aria-hidden="true"><span aria-hidden="true"
+          class="octicon octicon-link"></span></a>Presentaciones 2019-2:
+    </h2>
+    <iframe src="../slides/POA_2019_2.pdf" width="960px" height="600px" seamless webkitallowfullscreen
+      mozallowfullscreen allowfullscreen></iframe>
 
-      <h2>
-        <a
-          id="referencias"
-          class="anchor"
-          href="#referencias"
-          aria-hidden="true"
-          ><span aria-hidden="true" class="octicon octicon-link"></span></a
-        >Presentacion 2022-1:
-      </h2>
-      <iframe
-        src="../slides/Programacion_Orientada_a_Aspectos_2022-1.pdf"
-        width="960px"
-        height="600px"
-        seamless
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-      ></iframe>
+    <h2>
+      <a id="referencias" class="anchor" href="#referencias" aria-hidden="true"><span aria-hidden="true"
+          class="octicon octicon-link"></span></a>Presentacion 2021-1:
+    </h2>
+    <iframe src="../slides/POA_2021_1.pdf" width="960px" height="600px" seamless webkitallowfullscreen
+      mozallowfullscreen allowfullscreen></iframe>
 
-      <h2>
-        <a
-          id="referencias"
-          class="anchor"
-          href="#referencias"
-          aria-hidden="true"
-          ><span aria-hidden="true" class="octicon octicon-link"></span></a
-        >Presentacion 2022-2:
-      </h2>
-      <iframe
-        src="../slides/Programacion_Orientada_a_Aspectos_2022-2.pdf"
-        width="960px"
-        height="600px"
-        seamless
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-      ></iframe>
+    <h2>
+      <a id="referencias" class="anchor" href="#referencias" aria-hidden="true"><span aria-hidden="true"
+          class="octicon octicon-link"></span></a>Presentacion 2021-2:
+    </h2>
+    <iframe src="../slides/POA_2021_2.pdf" width="960px" height="600px" seamless webkitallowfullscreen
+      mozallowfullscreen allowfullscreen></iframe>
 
-      <footer class="site-footer">
-        <span class="site-footer-owner"
-          ><a href="https://github.com/ProgramacionOrientadaAspectos/POA_teoria"
-            >Programacion Orientada a Aspectos</a
-          >
-          is maintained by
-          <a href="https://github.com/ProgramacionOrientadaAspectos"
-            >ProgramacionOrientadaAspectos</a
-          >.</span
-        >
-        <span class="site-footer-credits"
-          >This page was created by Diego Rojas, Gustavo Galvis y Dorian
-          Tovar.</span
-        >
-      </footer>
-    </section>
-  </body>
+    <h2>
+      <a id="referencias" class="anchor" href="#referencias" aria-hidden="true"><span aria-hidden="true"
+          class="octicon octicon-link"></span></a>Presentacion 2022-1:
+    </h2>
+    <iframe src="../slides/Programacion_Orientada_a_Aspectos_2022-1.pdf" width="960px" height="600px" seamless
+      webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+    <h2>
+      <a id="referencias" class="anchor" href="#referencias" aria-hidden="true"><span aria-hidden="true"
+          class="octicon octicon-link"></span></a>Presentacion 2022-2:
+    </h2>
+    <iframe src="../slides/Programacion_Orientada_a_Aspectos_2022-2.pdf" width="960px" height="600px" seamless
+      webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+    <h2>
+      <a id="referencias" class="anchor" href="#referencias" aria-hidden="true"><span aria-hidden="true"
+          class="octicon octicon-link"></span></a>Presentacion 2023-1:
+    </h2>
+    <iframe src="../slides/POA_2023_1.pdf" width="960px" height="600px" seamless webkitallowfullscreen
+      mozallowfullscreen allowfullscreen></iframe>
+
+    <footer class="site-footer">
+      <span class="site-footer-owner"><a href="https://github.com/ProgramacionOrientadaAspectos/POA_teoria">Programacion
+          Orientada a Aspectos</a>
+        is maintained by
+        <a href="https://github.com/ProgramacionOrientadaAspectos">ProgramacionOrientadaAspectos</a>.</span>
+      <span class="site-footer-credits">This page was created by Diego Rojas, Gustavo Galvis y Dorian
+        Tovar.</span>
+    </footer>
+  </section>
+</body>
+
 </html>
